--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "@vue/composition-api": "^1.4.6",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "flutterwave-vue-v3": "^1.0.9",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
