--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/composition-api": "^1.4.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "flutterwave-vue-v3": "^1.0.9",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
